--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
             <h1>My ENGR 11A Project</h1>
              <h2>project Prusa Slicer software and the Prusa MINI+ printer</h2>
     <h2>First 3D Print Name tag</h2>
-    <p> The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
-    <img src="nametag.jpg" alt="Nametag 3D Print" width="300">
+
     </head>
     <body>
+            <p> The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
+    <img src="nametag.jpg" alt="Nametag 3D Print" width="300">
+        
+            <button onclick="showCurrentPhotos()">Show Current Photos</button>
+    <button onclick="showNewPhotos()">Show New Photos</button>
+
             <h2>Second 3D Print: printing torture test or calibration print</h2>
     <p>The second 3D print is designed to push the limits of the machine. I choose to print out a rifleman rfl-8d wich is also know as a computer game character. the issue I saw with his print was his arms were to long - more then a 45 degree angle .</p>
     <img src="second.jpg" alt="Calibration Test 3D Print" width="300">
     <img src="second-print.jpg" alt="Calibration Test 3D Print" width="300">
     <img src="second-print2.jpg" alt="Calibration Test 3D Print" width="300">
     <img src="second-print3.jpg" alt="Calibration Test 3D Print" width="300">
+
     <h3> Post reflection</h3>
     <p> Coming to ENGR 11A, I was very excited to learn how to 3D print and design different objects. In the nametag project, I had much fun creating my first-ever 3D print and succeeding on my very first try. On the other hand, the second print was a lot more complicated. I did many tries but still haven't succeeded in finding a print that will fit the requirements perfectly. While searching intensively for a new print, I at last found a perfect sort of action figure-looking print that ended up being my final print. One of my future goals is to become an entrepreneur, make different products that will solve problems, and make the world a better place. While being in this class, my expectations have exited as we are learning not just about designing but also about creating a website. This leaves me with a feeling that I am getting closer and closer to making my dream a reality. </p>
 
