--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         
             <button onclick="showCurrentPhotos()">Show Current Photos</button>
     <button onclick="showNewPhotos()">Show New Photos</button>
+            <div id="current-photos" style="display:none;">
+        <h2>Second 3D Print: Calibration Test</h2>
 
             <h2>Second 3D Print: printing torture test or calibration print</h2>
     <p>The second 3D print is designed to push the limits of the machine. I choose to print out a rifleman rfl-8d wich is also know as a computer game character. the issue I saw with his print was his arms were to long - more then a 45 degree angle .</p>
@@ -28,6 +30,13 @@
     <img src="second-print.jpg" alt="Calibration Test 3D Print" width="300">
     <img src="second-print2.jpg" alt="Calibration Test 3D Print" width="300">
     <img src="second-print3.jpg" alt="Calibration Test 3D Print" width="300">
+
+    <div id="new-photos" style="display:none;">
+        <h2>New 3D Print Photos</h2>
+        <p>Here are the newly added prints from my ongoing work!</p>
+        <img src="new-photo1.jpg" alt="New 3D Print 1" width="300">
+        <img src="new-photo2.jpg" alt="New 3D Print 2" width="300">
+    </div>
 
     <h3> Post reflection</h3>
     <p> Coming to ENGR 11A, I was very excited to learn how to 3D print and design different objects. In the nametag project, I had much fun creating my first-ever 3D print and succeeding on my very first try. On the other hand, the second print was a lot more complicated. I did many tries but still haven't succeeded in finding a print that will fit the requirements perfectly. While searching intensively for a new print, I at last found a perfect sort of action figure-looking print that ended up being my final print. One of my future goals is to become an entrepreneur, make different products that will solve problems, and make the world a better place. While being in this class, my expectations have exited as we are learning not just about designing but also about creating a website. This leaves me with a feeling that I am getting closer and closer to making my dream a reality. </p>
