--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p> The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
     <img src="nametag.jpg" alt="Nametag 3D Print" width="300">
         
-            <button onclick="showCurrentPhotos()">Show Current Photos</button>
+     <button onclick="showCurrentPhotos()">Show Current Photos</button>
     <button onclick="showNewPhotos()">Show New Photos</button>
             <div id="current-photos" style="display:none;">
         <h2>Second 3D Print: Calibration Test</h2>
@@ -40,7 +40,15 @@
 
     <h3> Post reflection</h3>
     <p> Coming to ENGR 11A, I was very excited to learn how to 3D print and design different objects. In the nametag project, I had much fun creating my first-ever 3D print and succeeding on my very first try. On the other hand, the second print was a lot more complicated. I did many tries but still haven't succeeded in finding a print that will fit the requirements perfectly. While searching intensively for a new print, I at last found a perfect sort of action figure-looking print that ended up being my final print. One of my future goals is to become an entrepreneur, make different products that will solve problems, and make the world a better place. While being in this class, my expectations have exited as we are learning not just about designing but also about creating a website. This leaves me with a feeling that I am getting closer and closer to making my dream a reality. </p>
+        function showCurrentPhotos() {
+            document.getElementById('current-photos').style.display = 'block';
+            document.getElementById('new-photos').style.display = 'none';
+        }
 
+        function showNewPhotos() {
+            document.getElementById('current-photos').style.display = 'none';
+            document.getElementById('new-photos').style.display = 'block';
+        }
 
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
