--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <p>The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
 
     <!-- Buttons to switch between current and new photos -->
-    <button onclick="showCurrentPhotos()">Show Current Photos</button>
-    <button onclick="showNewPhotos()">Show New Photos</button>
+    <button onclick="showCurrentPhotos()">Project 1</button>
+    <button onclick="showNewPhotos()">Project 2</button>
 
     <!-- Section for current photos -->
     <div id="current-photos" style="display:none;">
