--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     <div id="new-photos" style="display:none;">
         <h2>New 3D Print Photos</h2>
         <p>Here are the newly added prints from my ongoing work!</p>
-        <img src="new-photo1.jpg" alt="New 3D Print 1" width="300">
-        <img src="new-photo2.jpg" alt="New 3D Print 2" width="300">
+        <img src="IMG_2031.jpg" alt="New 3D Print 1" width="300">
+        <img src="IMG_2032.jpg" alt="New 3D Print 2" width="300">
+        <img src="IMG_2033.jpg" alt="New 3D Print 1" width="300">
+        <img src="IMG_2035.jpg" alt="New 3D Print 2" width="300">
+        <img src="IMG_2037.jpg" alt="New 3D Print 2" width="300">
+
     </div>
 
     <h3>Post reflection</h3>
