--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Section for new photos -->
     <div id="new-photos" style="display:none;">
         <h2>New 3D Print Photos</h2>
-        <p>Here are the newly added prints from my ongoing work!</p>
+        <p>Project 2 using Thinkercad</p>
         <img src="IMG_2031.jpg" alt="New 3D Print 1" width="300">
         <img src="IMG_2032.jpg" alt="New 3D Print 2" width="300">
         <img src="IMG_2033.jpg" alt="New 3D Print 1" width="300">
