--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Bare - ENGR 11A PROJECT ; )</title>
+    <title> ENGR 11A PROJECT ; )</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <h1>My ENGR 11A Project</h1>
-    <h2>project Prusa Slicer software and the Prusa MINI+ printer</h2>
 </head>
 
 <body>
-    <h2>First 3D Print: Name tag</h2>
+    <h2>Welcome to my webstie!!!</h2>
     <p>The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
 
     <!-- Buttons to switch between current and new photos -->
@@ -25,6 +24,9 @@
 
     <!-- Section for current photos -->
     <div id="current-photos" style="display:none;">
+            <h2>project Prusa Slicer software and the Prusa MINI+ printer</h2>
+    <p>The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
+
         <h2>Second 3D Print: Calibration Test</h2>
         <p>The second 3D print is designed to push the limits of the machine. I chose to print out a rifleman rfl-8d which is also known as a computer game character. The issue I saw with this print was that the arms were too long - more than a 45-degree angle.</p>
         <img src="nametag.jpg" alt="Nametag 3D Print" width="300">
