--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h2>Welcome to my webstie!!!</h2>
+    <h2>Welcome to my website!!!</h2>
 
     <!-- Buttons to switch between current and new photos -->
 <button onclick="showCurrentPhotos()" style="background-color: blue; color: white;">Project 1</button>
