--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
     <h2>Welcome to my website!!!</h2>
+        <h3>Please click on the project you want to view:</h3>
+
 
     <!-- Buttons to switch between current and new photos -->
 <button onclick="showCurrentPhotos()" style="background-color: blue; color: white;">Project 1</button>
