--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
     <!-- Section for new photos -->
     <div id="new-photos" style="display:none;">
-        <h2>New 3D Print Photos</h2>
-        <p>Project 2 using Thinkercad</p>
+        <h2>Project 2</h2>
+        <p>Beyond its practicality, I also aimed to add an element of fun and creativity, making it more than just a typical, everyday design.</p>
+        
         <img src="IMG_2031.jpg" alt="New 3D Print 1" width="300">
         <img src="IMG_2032.jpg" alt="New 3D Print 2" width="300">
         <img src="IMG_2033.jpg" alt="New 3D Print 1" width="300">
