--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     <link href="css/styles.css" rel="stylesheet" />
     <h1>My ENGR 11A Project</h1>
 </head>
+    <style>
+        .main-title {
+            font-size: 3em;
+            color: #e74c3c; /* Red color */
+            text-align: center; /* Center the title */
+            font-family: 'Arial', sans-serif; /* Change the font */
+            text-transform: uppercase; /* Make all letters uppercase */
+            letter-spacing: 2px; /* Add some space between the letters */
+            padding: 20px; /* Add some padding */
+            background-color: #f1f1f1; /* Light gray background */
+            border-radius: 10px; /* Rounded corners */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow effect */
+        }
+    </style>
 
 <body>
     <h2>Welcome to my website!!!</h2>
