--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     </style>
 
 <body>
+        <h1 class="main-title">My ENGR 11A Project</h1>
+
     <h2>Welcome to my website!!!</h2>
         <h3>Please click on the project you want to view:</h3>
 
