--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 
 <body>
-        <h1 class="main-title">My ENGR 11A Project</h1>
+        <h1 class="main-title">My ENGR 11A Website</h1>
 
     <h2>Welcome to my website!!!</h2>
         <h3>Please click on the project you want to view:</h3>
