--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <img src="IMG_2033.jpg" alt="New 3D Print 1" width="300">
         <img src="IMG_2035.jpg" alt="New 3D Print 2" width="300">
         <img src="IMG_2037.jpg" alt="New 3D Print 2" width="300">
-        <img src="pic.jpg" alt="Calibration Test 3D Print" width="300">
+        <img src="pic.jpg" alt="New 3D Print 2" width="300">
+
 
 
     </div>
