--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <!-- Section for new photos -->
     <div id="new-photos" style="display:none;">
         <h2>Project 2</h2>
+                <h2>Thikercad - Phone Pen Holder</h2>
+
         <p>Post reflection Thikercad Project - I used to work with solid works for 3D designing before,so I had to get used to TinkerCad but turns out it is a very simple 3D designing tool. While thinking of a design to combine two designs into one my main personal goal in mind was to make a product that would be useful, functional and that I would love to use. I'm really proud of how my final design turned out. It’s highly functional, allowing for both pen storage and serving as a phone stand. I find my designs to be super functional and efficient as you can store pens and also stand your phone.Beyond its practicality, I also aimed to add an element of fun and creativity, making it more than just a typical, everyday design.</p>
         
         <img src="IMG_2031.jpg" alt="New 3D Print 1" width="300">
