--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
         <h3>Please click on the project you want to view:</h3>
 
 
-    <!-- Buttons to switch between current and new photos -->
 <button onclick="showCurrentPhotos()" style="background-color: blue; color: white;">Project 1</button>
 <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
 
-    <!-- Section for current photos -->
     <div id="current-photos" style="display:none;">
             <h2>project Prusa Slicer software and the Prusa MINI+ printer</h2>
     <p>The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
@@ -58,7 +56,6 @@
 
     </div>
 
-    <!-- Section for new photos -->
     <div id="new-photos" style="display:none;">
         <h2>Project 2</h2>
                 <h2>Thikercad - Phone Pen Holder</h2>
@@ -71,7 +68,8 @@
         <img src="IMG_2035.jpg" alt="New 3D Print 2" width="300">
         <img src="IMG_2037.jpg" alt="New 3D Print 2" width="300">
         <img src="pic.png" alt="New 3D Print 2" width="900">
-
+        
+<p>Post reflection Project Fusion - Working with Fusion was an interesting experience. Fusions seems to have an obvious advantage over Thikercad as there are more functions we can use for our designing. I found it very complicated to use because there were so many functions. My main goal in the second design was to take my first design and make it more professional and simpler so people could use it in the workspace. Another consideration I had is that I wanted a more stable phone holder. When using it I find it very useful whether I am watching a video and reflecting on it or If I am working and using the stand to play music on my phone. </p>
 
 
     </div>
