--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         <img src="IMG_2035.jpg" alt="New 3D Print 2" width="300">
         <img src="IMG_2037.jpg" alt="New 3D Print 2" width="300">
         <img src="pic.png" alt="New 3D Print 2" width="900">
+
+     <h2>Fusion - Phone Pen Holder</h2>
+        <img src="pic2.png" alt="New 3D Print 2" width="900">
+
         
 <p>Post reflection Project Fusion - Working with Fusion was an interesting experience. Fusions seems to have an obvious advantage over Thikercad as there are more functions we can use for our designing. I found it very complicated to use because there were so many functions. My main goal in the second design was to take my first design and make it more professional and simpler so people could use it in the workspace. Another consideration I had is that I wanted a more stable phone holder. When using it I find it very useful whether I am watching a video and reflecting on it or If I am working and using the stand to play music on my phone. </p>
 
