--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <!-- Title moved here -->
+    <!-- Title -->
     <h1 class="main-title">My ENGR 11A Website</h1>
 
     <h2>Welcome to my website!!!</h2>
@@ -41,27 +41,36 @@
 
     <div id="current-photos" style="display:none;">
         <h2>Project Prusa Slicer software and the Prusa MINI+ printer</h2>
-        <p>The first print is a 3D print of my name Daniel Shemesh as a name tag.</p>
+        <p>The first print is a 3D print of my name, Daniel Shemesh, as a name tag.</p>
         <img src="nametag.jpg" alt="Nametag 3D Print" width="300">
 
         <h2>Second 3D Print: Calibration Test</h2>
-        <p>The second 3D print is designed to push the limits of the machine. I chose to print out a rifleman rfl-8d which is also known as a computer game character. The issue I saw with this print was that the arms were too long - more than a 45-degree angle.</p>
+        <p>The second 3D print is designed to push the limits of the machine. I chose to print out a rifleman rfl-8d, which is also known as a computer game character. The issue I saw with this print was that the arms were too long—more than a 45-degree angle.</p>
         <img src="second.jpg" alt="Calibration Test 3D Print" width="300">
         <img src="second-print.jpg" alt="Calibration Test 3D Print" width="300">
         <img src="second-print2.jpg" alt="Calibration Test 3D Print" width="300">
         <img src="second-print3.jpg" alt="Calibration Test 3D Print" width="300">
         
         <h3>Post reflection</h3>
-        <p>Coming to ENGR 11A, I was very excited to learn how to 3D print and design different objects. In the nametag project, I had much fun creating my first-ever 3D print and succeeding on my very first try...</p>
+        <p>Coming to ENGR 11A, I was very excited to learn how to 3D print and design different objects. In the nametag project, I had much fun creating my first-ever 3D print and succeeding on my very first try. On the other hand, the second print was more complicated. I did many tries but still haven’t succeeded in finding a print that will meet the requirements perfectly. In the end, I found an action figure-looking print that became my final project. One of my future goals is to become an entrepreneur, creating products that solve problems and make the world a better place. This class has exceeded my expectations, and I feel like I’m getting closer to my dream.</p>
     </div>
 
     <div id="new-photos" style="display:none;">
-        <h2>Project 2</h2>
-        <h2>TinkerCAD - Phone Pen Holder</h2>
-        <p>Post reflection: I used to work with SolidWorks for 3D designing before, so I had to get used to TinkerCAD...</p>
+        <h2>Project 2: TinkerCAD - Phone Pen Holder</h2>
+        <p>Post reflection: I used to work with SolidWorks for 3D designing before, so I had to get used to TinkerCAD. It turned out to be a very simple 3D designing tool. I wanted to make a product that was both useful and functional. I’m proud of how my design turned out—it serves as a phone stand and a pen holder.</p>
         <img src="IMG_2031.jpg" alt="New 3D Print 1" width="300">
         <img src="IMG_2032.jpg" alt="New 3D Print 2" width="300">
-        <!-- Additional images and content here -->
+        <img src="IMG_2033.jpg" alt="New 3D Print 1" width="300">
+        <img src="IMG_2035.jpg" alt="New 3D Print 2" width="300">
+        <img src="IMG_2037.jpg" alt="New 3D Print 2" width="300">
+        <img src="pic.png" alt="New 3D Print 2" width="900">
+
+        <h2>Project 3: Fusion 360 - Phone Pen Holder</h2>
+        <p>Post reflection: Working with Fusion 360 was a new experience. It offers more functions than TinkerCAD but is more complex. My goal was to take my original design and make it more professional. The new phone holder design is more stable and ideal for a workspace setting.</p>
+        <img src="pic2.png" alt="Fusion 360 Print" width="900">
+        <img src="IMG_2052.jpg" alt="Fusion 360 Print" width="300">
+        <img src="IMG_2053.jpg" alt="Fusion 360 Print" width="300">
+        <img src="IMG_2054.jpg" alt="Fusion 360 Print" width="300">
     </div>
 
     <!-- JavaScript to toggle between current and new photos -->
@@ -84,4 +93,3 @@
 </body>
 
 </html>
-
