--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img src="pic.png" alt="New 3D Print 2" width="900">
 
         <h2>Project 3: Fusion 360 - Phone Pen Holder</h2>
-        <p>Post reflection: Working with Fusion 360 was a new experience. It offers more functions than TinkerCAD but is more complex. My goal was to take my original design and make it more professional. The new phone holder design is more stable and ideal for a workspace setting.</p>
+        <p>Post reflection Project Fusion - Working with Fusion was an interesting experience. Fusions seems to have an obvious advantage over Thikercad as there are more functions we can use for our designing. I found it very complicated to use because there were so many functions. My main goal in the second design was to take my first design and make it more professional and simpler so people could use it in the workspace. Another consideration I had is that I wanted a more stable phone holder. When using it I find it very useful whether I am watching a video and reflecting on it or If I am working and using the stand to play music on my phone.</p>
         <img src="pic2.png" alt="Fusion 360 Print" width="900">
         <img src="IMG_2052.jpg" alt="Fusion 360 Print" width="300">
         <img src="IMG_2053.jpg" alt="Fusion 360 Print" width="300">
