--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
     <img src="IMG_2140.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2141.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2143.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2144.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2145.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2146.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    
 
 
 
