--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
     <div id="project3-photos" style="display:none;">
-    <h2>Project 3: Fusion 360 - Advanced Phone Pen Holder</h2>
+    <h2>Project 3: Alarm Clock Holder</h2>
     <p>Post reflection Project 3 - Coming into this project, I was very excited about the idea of building an alarm clock for the first time in my life! I felt that this would be one of the most exciting projects we did so far. Throughout the process, I experienced both challenges and successes, but I am proud to have completed it in the end.
 During this project I worked with my teammate, Charlie.  We were working very efficiently together, and I really enjoyed working with him. We worked well together, and it made the project feel much more manageable.
 The most difficult part was the design phase, particularly using Fusion 360. The software presents a steep learning curve, but I found that overcoming these challenges helped me build my skills further.
@@ -87,12 +87,16 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
     <img src="IMG_2120.jpg" alt="Fusion 360 3D printed phone pen holder - front view" width="300">
     <img src="IMG_2123.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2124.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2140.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2141.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2143.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+                                <h2>Laser cutting Designing</h2>
+
     <img src="IMG_2144.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2145.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2146.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+                <h2>Laser cutting </h2>
+    <img src="IMG_2140.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2141.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2143.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+
     
 
 
