--- a/index.html
+++ b/index.html
@@ -93,10 +93,14 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
     <img src="IMG_2145.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2146.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
                 <h2>Laser cutting </h2>
+        <p>This faze was very hard we had to figure out how to build our sketch from zero and make it in a dxf format for the laser cutting</p>
     <img src="IMG_2140.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2141.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2143.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-
+                <h2>Laser cutting Final cut number 2 </h2>
+        <p>Laser cutting 2 - IN This step we decided to take a diffrent approach. Instead of recreating the whole sketch we decided to adjust by 103 % the size of the holder and it succefully worked </p>
+    <img src="IMG_2152.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2153.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     
 
 
