--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
     <img src="IMG_2140.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2141.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2143.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+                        <p> Unfortunately our first laser cut was not succesgull interms of size: It was just too small to fit. </p>
+
                 <h2>Laser cutting Final cut number 2 </h2>
         <p>Laser cutting 2 - IN This step we decided to take a diffrent approach. Instead of recreating the whole sketch we decided to adjust by 103 % the size of the holder and it succefully worked </p>
     <img src="IMG_2152.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
