--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@ During this project I worked with my teammate, Charlie.  We were working very ef
 The most difficult part was the design phase, particularly using Fusion 360. The software presents a steep learning curve, but I found that overcoming these challenges helped me build my skills further.
 ENGR 11A class keeps surprising me. The work is not easy but the end result is very rewarding and gives me a sense of accomplishment.
 </p>
+  <h2>Soldering an alarm clock </h2>
+          <>Soldering an alarm clock was a very intresting expirience. As somone doing it for the first time I really find it satisfying to sold. </p>
+
+            <img src="IMG_2124.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+
+                                        <h2>Alarm clock holder </h2>
+<p>Alarm clock holder - This part of the project was a bit tricky since our first print had one false measurment (the side was too short) we had to redue the sketch. At last we got our final prodoct! </p>
     <img src="IMG_2119.jpg" alt="Fusion 360 3D printed phone pen holder - side view" width="300">
     <img src="IMG_2120.jpg" alt="Fusion 360 3D printed phone pen holder - front view" width="300">
     <img src="IMG_2123.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
