--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
     <img src="IMG_2123.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2124.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
                                 <h2>Alarm clock holder Designing</h2>
-        <p>In This step we we had to take mesurments of all the mesures of the alarm clock and na=batterie case for getting the specific detailes for a perfect design </p>
+        <p>In This step we we had to take mesurments of all the mesures of the alarm clock and na=batterie case for getting the specific detailes for a perfect design. </p>
 
     <img src="IMG_2144.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2145.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
