--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ The most difficult part was the design phase, particularly using Fusion 360. The
 ENGR 11A class keeps surprising me. The work is not easy but the end result is very rewarding and gives me a sense of accomplishment.
 </p>
   <h2>Soldering an alarm clock </h2>
-          <>Soldering an alarm clock was a very intresting expirience. As somone doing it for the first time I really find it satisfying to sold. </p>
+          <p>Soldering an alarm clock was a very intresting expirience. As somone doing it for the first time I really find it satisfying to sold. </p>
 
             <img src="IMG_2124.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
 
