--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <button onclick="showCurrentPhotos()" style="background-color: blue; color: white;">Project 1</button>
     <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
+    <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
+
 
 
     <div id="current-photos" style="display:none;">
@@ -111,7 +113,27 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
         <p>Laser cutting 2 - IN This step we decided to take a diffrent approach. Instead of recreating the whole sketch we decided to adjust by 103 % the size of the holder and it succefully worked. </p>
     <img src="IMG_2152.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
     <img src="IMG_2153.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    
+
+<div id="project4-photos" style="display:none;">
+    <h2>Project 4: 3D-Printed e-NABLE Prosthesis</h2>
+    <p>Post reflection - For this project, I 3D-printed a prosthetic hand using the e-NABLE prosthesis model. I scaled the hand to 150% and worked through the assembly process using the provided documentation and resources. Here is the assembly process and my modifications:</p>
+
+    <h3>Assembly Process</h3>
+    <p>[Insert your explanation of the assembly process]</p>
+    <img src="f1.jpg" alt="Assembly process step 1" width="300">
+    <img src="f2.jpg" alt="Assembly process step 2" width="300">
+    <img src="f3.jpg" alt="Assembly process step 3" width="300">
+
+    <h3>Design Modifications</h3>
+    <p>I also made a design modification to enhance the functionality of the prosthetic hand. Here are the details:</p>
+    <img src="f4.jpg" alt="Design modification 1" width="300">
+    <img src="f5.jpg" alt="Design modification 2" width="300">
+    <img src="f6.jpg" alt="Design modification 3" width="300">
+
+    <h3>Reflection</h3>
+    <p>[Insert your reflection about the project and suggested improvements to the prosthesis design]</p>
+</div>
+
 
 
 
