--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
         document.getElementById('new-photos').style.display = 'none';
         document.getElementById('project3-photos').style.display = 'block';
     }
+            function showProject4Photos() {
+            document.getElementById('current-photos').style.display = 'none';
+            document.getElementById('new-photos').style.display = 'none';
+            document.getElementById('project3-photos').style.display = 'none';
+            document.getElementById('project4-photos').style.display = 'block';
+        }
     </script>
     
 
